Update University of Dhaka.html

--- a/University of Dhaka.html
+++ b/University of Dhaka.html
@@ -868,6 +868,9 @@
             </div>
             <!-- End Single item -->
         </div>
+        <div>
+            <h1> Welcome To The New Section</h1>
+        </div>
         
         <!-- Start Footer Bottom -->
         <div class="footer-bottom">
