Update University of Dhaka.html

--- a/University of Dhaka.html
+++ b/University of Dhaka.html
@@ -870,6 +870,7 @@
         </div>
         <div>
             <h1> Welcome To The New Section</h1>
+            <h2> Hello I am VC</h2>
         </div>
         
         <!-- Start Footer Bottom -->
